# docker-healthcheck

./: .gitignore  Dockerfile  README.md  compose.yaml
.github/workflows/: docker-image.yml
code/: CMakeLists.txt  main.cpp
